connect properly with product service with batch service